added HPs from GPT-3 PT.1

--- a/GPU_Training_GPT/notes.ipynb
+++ b/GPU_Training_GPT/notes.ipynb
@@ -128,6 +128,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "##### What is Flash Attention? \n",
+    "- This is a kernel fusion program\n",
+    "- There are certain fusions that .compile cannot find \n",
+    "- flash attention is significantly faster because it is mindful of memory allocations \n",
+    "- N x N matrix is never materialized and it is a very large matrix \n",
+    "- You can do an online softmax that does not require all variables to be in the function, you can do it in a \"online\" matter\n",
+    "- There are other optimizations that torch compile cannot find \n",
+    "- This improves performance around 30% again "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Ugly Numbers and vocab size optimization \n",
+    "- Lots of kernels are written in powers of 2. \n",
+    "- Scan your code and look for ugly numbers \n",
+    "- We get to the vocab size 50257\n",
+    "- A way to do this is to increase the number to the nearest number that is related to powers of 2\n",
+    "- Then, we get increase the vocab size to 50304\n",
+    "- This gives the model a 4% improvement \n",
+    "- When we increase the embedding table because we never use these tokens, we see improvement "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Algorithmic Improvements from GPT-3\n",
+    "- We have to use multiple differnet hyperparameters \n",
+    "- Beta = 0.9\n",
+    "- Epsilon = 0.95\n",
+    "- clip grad norm = 1, we are making sure that length of vectors is not over 1, if by accident we have a terrible batch, we can prevent shocks to the model \n",
+    "- Now we also implement a cosine decay in the learning rate, \n",
+    " - The learning rate starts at 0, ramps up and decays until 10% "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
