fixed the fineweb code

--- a/Deprecated_Models/GPU_Training_GPT/notes.ipynb
+++ b/Deprecated_Models/GPU_Training_GPT/notes.ipynb
@@ -169,7 +169,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### THIS IS WHERE THE MONEY IS MADE!!!!\n",
+    "#### DISTRIBUTED DATA PARRALEL \n",
+    "- So far we have only been using one gpu, but we have been paying for 8\n",
+    "- To do this we are using the DistributedDataParallel \n",
+    "- This works by launching 8 processes and each process is assigned a GPU, \n",
+    "- Everything is the same, all that they are doing is calculating different parts of the data \n",
+    "- Then, they pretty much just change one simple calculation \n",
+    "- We summon this by calling **torchrun**\n",
+    "-  Here are the parameters \n",
+    "- DDP: Tells you if there is DDP available \n",
+    "- Worldsize: \n",
+    "- Rank: Which GPU you are using, this is the only thing that is different between files \n",
+    "- The Local rank is a subspecialty \n",
+    "- We have to set device = \"cuda:{ddp_local_rank}\", this tells which cuda to use \n",
+    "- Master_process = is process 0 and it does logging and printing, it does some additional work \n",
+    "- If we are not using DDP, then we just set everything to default \n",
+    "- ddp_rnak - 0\n",
+    "- ddp_local_rank = 0\n",
+    "- world size = 1\n",
+    "- We don't want to always have reduntant print processes, so we can use \"master_process variable\"\n",
+    "- Here is the process with torchrun, torchrun --standalone --nproc_per_node=8 train.py\n",
+    "- So, we have to edit the dataloader application, we have to pass in the rank and size into the data loader\n",
+    "- After we create the model, we need to wrap the model in DDP()\n",
+    "- Forward pass, nothing changes, but in backward pass, DDP averages the gradietns and every rank is now updating the model on the average\n",
+    "- Now, we don't want to synchronize the gradients every single substep, we only want the synch ddp to be true if it is the final iteration \n",
+    "- model.require_backward_grad_sync"
+   ]
   },
   {
    "cell_type": "code",
