--- a/model_distillation.ipynb
+++ b/model_distillation.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "ffaa51ca-f77d-49ba-9dbd-740f8eba9570",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
-    "models = ['LLama 3.1 405B', 'GPT-4o-Mini', 'Multilingual-Roberta', 'Fine Tuned GPT-2']\n",
+    "models = ['LLama 3.1 405B', 'GPT-4o-Mini', 'Custom GPT-2 ', 'Fine-tuned custom GPT-2']\n",
     "accuracies = [llama31_405B_accuracy, gpt4omini_accuracy, multilingual, ft_roberta]\n",
     "\n",
     "# Convert accuracies to percentages\n",
